# google_capstone_project

./: README.md  RUN_COMMANDS.md  Write up Draft .md  chief-nutrition-officer.ipynb  mindfullness_agent.ipynb  pyproject.toml
deployment/: cleanup.py  local.py  remote.py
wellness/: A2A_GUIDE.md  README.md  app.py  requirements.txt  test_chat.py
wellness/chief_wellness_officer/: __init__.py  agent.py  cwo_agent.py  cwo_main.py  cwo_memory_tools.py  cwo_profile_tools.py  cwo_tools.py  user_profile_store.py
wellness/data/: user_id.txt  user_memory.json  user_profiles.json
wellness/exercise_agent/: __init__.py  exercise_agent.py  exercise_main.py  exercise_tools.py  invocation_store.py  job_store.py
wellness/memory/: __init__.py  user_memory_manager.py
wellness/mindfullness_agent/: __init__.py  mindfulness_agent.py  mindfulness_main.py  mindfulness_tools.py
wellness/nutrition_agent/: nutrition_agent.py  nutrition_tools.py
wellness/utils/: utils.py
